[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/img/machines.png" type="Texture" id=1]
[ext_resource path="res://source/machines/Mixer.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 14 )

[node name="Mixer" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 16, 16 )
texture = ExtResource( 1 )
hframes = 4

[node name="PolyIn1" type="Polygon2D" parent="."]
color = Color( 1, 1, 1, 0 )
polygon = PoolVector2Array( 4, 14, 4, 12, 9, 12, 9, 14 )

[node name="PolyIn2" type="Polygon2D" parent="."]
color = Color( 1, 1, 1, 0 )
polygon = PoolVector2Array( 4, 20, 4, 18, 9, 18, 9, 20 )

[node name="PolyOut" type="Polygon2D" parent="."]
color = Color( 1, 1, 1, 0 )
polygon = PoolVector2Array( 23, 17, 23, 15, 28, 15, 28, 17 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 16, 16 )
shape = SubResource( 1 )

[connection signal="input_event" from="Area2D" to="." method="_on_input_event"]
